--- a/KeyboardGestures.UI/Windows/CommandSettingsTab.axaml
+++ b/KeyboardGestures.UI/Windows/CommandSettingsTab.axaml
@@ -1,15 +1,10 @@
 <Window
-    x:Class="KeyboardGestures.UI.Windows.SettingsWindow"
+    x:Class="KeyboardGestures.UI.Windows.CommandSettingsTab"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:vm="using:KeyboardGestures.UI.ViewModels"
-    Width="900"
-    Height="600"
-	CanResize="False"
-    Title="Settings"
-    Background="#7a000000"
-	TransparencyLevelHint="AcrylicBlur">
+    >
 
 	<Grid ColumnDefinitions="1*, 2*" >
 
